in contact and about fixed large font clipping

--- a/src/Pages/About/about.scss
+++ b/src/Pages/About/about.scss
@@ -16,6 +16,14 @@
       .hero-container {
         position: relative;
         @include styles.flexCenter(flex-start, row);
+        .about {
+          position: absolute;
+          top: 100px;
+          right: 0;
+          font-size: 200px;
+          z-index: 9999;
+          color: styles.$very-light-grey;
+        }
         .hero-image {
           width: 635px;
           height: 720px;
@@ -28,14 +36,6 @@
           background-color: white;
           right: 0;
           bottom: 0;
-          .about {
-            position: absolute;
-            top: -100px;
-            right: 0;
-            font-size: 200px;
-            z-index: 9999;
-            color: styles.$very-light-grey;
-          }
           .hero-inner-text-container {
             position: absolute;
             width: 80%;
